# Boids

./: .gitignore  CMakeLists.txt  Makefile  main.c  readme.md
include/core/: camera.h  program.h
include/graphics/: render.h  renderer.h
include/input/: input_handler.h
include/objects/: boid.h  cube.h  ground.h  object.h  tower.h
include/utils/: logger.h  vmath.h
src/: main.c  main.cpp
src/core/: camera.cpp  program.cpp
src/graphics/: render.c
src/input/: input_handler.cpp
src/objects/: boid.cpp  cube.cpp  ground.cpp  tower.cpp
src/utils/: logger.cpp  vmath.cpp
